--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap');
+
+body{
+  background-color: #222;
+}
+
 .App {
   text-align: center;
   font-size: 1.4em;
   font-family: 'Roboto', sans-serif;
+  color: White;
 }
 
 .nav{
   padding: 0 10px 0 10px;
   width: 100%;
   height: 100px;
-  background-color: bisque;
+  background-color: rgb(133, 174, 228);
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
+  color: #222;
+}
+
+.route-link{
+  text-decoration: none;
+  color: #222;
+}
+.route-link:visited{
+  color: #222;
+}
+
+.route-link-white{
+  color: white;
+}
+.route-link-white:visited{
+  color: White;
 }
 
 .container-menu{
@@ -52,9 +75,9 @@
 }
 
 button{
-  background-color: rgb(129, 185, 250);
+  background-color: rgb(65, 153, 253);
   border: none;
-  color: white;
+  color: #222;
   padding: 10px 10px;
   border-radius: 10px;
   box-shadow: 2px 2px 1px 1px rgba(0,0,0,0.5);
@@ -83,6 +106,8 @@ input{
   margin-bottom: 10px;
   padding: 0 10px;
   font-size: 1.1em;
+  padding: 5px;
+  border-radius: 10px;
 }
 
 small{
@@ -97,17 +122,6 @@ form{
   align-items: center;
   justify-content: center;
   margin-top: 15px;
-}
-
-input{
-  width: 30%;
-  height: 30px;
-  outline: 0;
-  background-color: aliceblue;
-  border-bottom: 0.3px solid gray;
-  margin-bottom: 10px;
-  padding: 0 10px;
-  font-size: 1.1em;
 }
 
 small{
